[package]
name = "sensitive-word"
version = "0.1.0"
edition = "2021"  # 改为2021，2024版本尚未发布

[dependencies]
aho-corasick = "1.1.2"  # AC自动机算法实现
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["macros"] }
bincode = { version = "2.0", features = ["serde"] }        # 用于索引文件的二进制序列化
clap = { version = "4.5.4", features = ["derive"] }  # 命令行参数解析
fs_extra = "1.3.0"       # 扩展文件操作功能
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"       # JSON序列化支持
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["trace", "fs", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }

[profile.dev]
# This isn't required for development builds, but makes development
# build behavior match release builds. To enable unwinding panics
# during development, simply remove this line.
panic = "abort" # Abort on panic

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.